# pyclub

./: .gitignore  .gitignore.save  Pipfile  README.rst  gtfs_tools.py  pyproject.toml  requirements.txt
data/: .~lock.nz_crashes_metadata.csv#  auckland_new-zealand_roads_gen1.geojson  auckland_transit_delays_20170217--20170226.csv  bicycle_counts_2017.csv  nz_crashes_metadata.csv
homework_solutions/: auckland_crashes.geojson  auckland_crashy_roads.geojson  gtfs_tools.py  homework_01_solutions.ipynb  homework_02_solutions.ipynb  homework_03_solutions.ipynb  homework_05_solutions.ipynb  homework_06_solutions.ipynb  homework_07_solutions.ipynb  homework_09_solutions.ipynb  homework_11_solutions.ipynb  new_gtfs_tools.py  roads.geojson
ipynb/: gtfs_tools.py  homework_01.ipynb  homework_01_solutions.ipynb  homework_02_solutions.ipynb
ipynb/.ipynb_checkpoints/: Homework 1-checkpoint.ipynb
other_solutions/: DG_pyclub3.ipynb
output/: auckland_crashy_roads.geojson  flying_catchments.geojson  train_stations.geojson  walking_catchments.geojson
