[tool.poetry]
name = "pyclub"
version = "12.2.0"
description = "Notes on data science at MRCagney using Python"
authors = ["Alex Raichev <araichev@mrcagney.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^0.25.3"
jupyter = "^1.0"
gtfs_kit = "^2.2"
geopandas = "^0.6.2"
rtree = "^0.8.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
