[tool.poetry]
name = "pyclub"
version = "12.2.1"
description = "Notes on data science at MRCagney using Python"
authors = ["Alex Raichev <araichev@mrcagney.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "<1"
jupyter = "^1.0"
gtfs_kit = "^3.0"
geopandas = "<1"
rtree = "<1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
